<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSearchActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cName"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:inputType="text"
            android:hint="@string/cName_eng"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cID"
        android:layout_below="@id/cName" >

        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:hint="@string/cID_eng"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cACNO"
        android:layout_below="@id/cID" >

        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:textSize="13dp"
            android:layout_height="wrap_content"
            android:hint="@string/cACNO_eng"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ccNO"
        android:layout_below="@id/cACNO">

        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:textSize="13dp"
            android:layout_height="wrap_content"
            android:hint="@string/ccNO_eng"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:layout_below="@id/ccNO"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:text="@string/search_eng"
        android:id="@+id/search"
        android:textSize="14dp"
        android:background="@drawable/roundedbutton"/>

</RelativeLayout>
</ScrollView>