<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/logo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:inputType="text"
            android:hint="@string/username_eng"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/username" >

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24px"
            android:layout_height="wrap_content"
            android:hint="@string/password_eng"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:drawableStart="@drawable/ic_lock_open_black_24dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="100dp"
        android:text="@string/login_eng"
        android:id="@+id/login"
        android:textSize="30dp"
        android:background="#82FC96"/>

</RelativeLayout>
</ScrollView>