<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SMTPFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autoMethod">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="13dp"
                android:inputType="text"
                android:hint="@string/automethod"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mailAddress"
            android:layout_below="@id/autoMethod" >

            <EditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:textSize="13dp"
                android:layout_height="35dp"
                android:hint="@string/maliaddress"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_below="@id/mailAddress" >

            <EditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:textSize="13dp"
                android:layout_height="35dp"
                android:hint="@string/username"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/username">

            <EditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:textSize="13dp"
                android:layout_height="35dp"
                android:hint="@string/password"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeout"
            android:layout_below="@id/password">

            <EditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:textSize="13dp"
                android:layout_height="35dp"
                android:hint="@string/timeout"
                />

        </android.support.design.widget.TextInputLayout>



        <Switch
            android:id="@+id/emailorsmsswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeout"
            android:layout_marginLeft="15dp"
            android:textSize="13dp"
            android:text="Email/SMS                                                                                      "/>
        <Switch
            android:id="@+id/addcharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailorsmsswitch"
            android:layout_marginLeft="15dp"
            android:textSize="13dp"
            android:text="Add Charge (OFF/ON)                                                                                      "/>
        <Switch
            android:id="@+id/addgas"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addcharge"
            android:textSize="13dp"
            android:text="Add Gas (OFF/ON)                                                                                      "/>
        <Switch
            android:id="@+id/refund"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addgas"
            android:textSize="13dp"
            android:text="Refund Gas (OFF/ON)                                                                                      "/>
        <Switch
            android:id="@+id/addcard"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/refund"
            android:textSize="13dp"
            android:text="Add card (OFF/ON)                                                                                      "/>
        <Switch
            android:id="@+id/returncard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/addcard"
            android:textSize="13dp"
            android:text="Return Card (OFF/ON)                                                                                     "/>
        <Switch
            android:id="@+id/activecard"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/returncard"
            android:textSize="13dp"
            android:text="Active Card (OFF/ON)                                                                                      "/>

        <Switch
            android:id="@+id/cardlost"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activecard"
            android:textSize="13dp"
            android:text="Card Lost (OFF/ON)                                                                                      "/>



        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardlost"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:text="Save"
            android:id="@+id/save"
            android:textSize="14dp"
            android:background="@drawable/roundedbutton"/>



    </RelativeLayout>

    </ScrollView>

</FrameLayout>